--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "browserify": "^7.0.1",
     "del": "^1.1.0",
     "gulp": "^3.8.10",
+    "gulp-smoosher": "0.0.7",
     "watchify": "^2.2.1"
   }
 }
