--- a/package.json
+++ b/package.json
@@ -16,12 +16,11 @@
     "FX": "git://github.com/eib/FX",
     "PHYSX": "git://github.com/eib/PHYSX",
     "bower": "^1.3.12",
-    "browserify": "^7.0.1",
     "color": "^0.7.3",
     "del": "^1.1.0",
     "extend": "^2.0.0",
     "gulp": "^3.8.10",
     "gulp-smoosher": "0.0.7",
-    "watchify": "^2.2.1"
+    "webpack": "^2.2.1"
   }
 }
